--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
 </head>
 <body>
-        <script src="conditionalsNotes.js"></script>
+        <script src="functionNotes.js"></script>
 
 </body>
 </html>
