--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
 </head>
 <body>
-        <script src="functionsPractice.js"></script>
+        <script src="loopsNotes.js"></script>
 
 </body>
 </html>
