Did baseball css example

--- a/Notes/CSS Notes/index.html
+++ b/Notes/CSS Notes/index.html
@@ -40,13 +40,89 @@
 
         <script src="loopNotes.js"></script> -->
 
-        <div class = "unread important">Message 1</div>
+        <!-- <div class = "unread important">Message 1</div>
         <div class = "unread">Message 2</div>
         <div class = "read important">Message 3</div>
-        <div class = "read">Message 4</div>
-</body
+        <div class = "read">Message 4</div> -->
+        
+        <div class=" Roster">
+                <div class="Pitchers">
+                        <div class="Starters">
+                                <ul>
+                                        <li>Andrew Abbott (S)</li>
+                                        <li>Hunter Greene  (S)</li>
+                                        <li>Nick Lodolo (S)</li>
+                                        <li>Nick Martinez (S)</li>
+                                        <li>Brady Singer (S)</li>
+                                </ul>
+                        </div>
+                        <div class="Relievers">
+                                <ul>
+                                        <li>Scott Barlow                                         </li>
+                                        <li>Alexis Díaz 
+                                        </li>
+                                        <li>Rhett Lowder 
+                                        </li>
+                                        <li>Sam Moll 
+                                        </li>
+                                        <li>Emilio Pagán 
+                                        </li>
+                                        <li>Taylor Rogers 
+                                        </li>
+                                        <li>Tony Santillan 
+                                        </li>
+                                        <li>Carson Spiers 
+                                        </li>
+                                        <li>Brent Suter 
+                                        </li>
+                                        <li>Brandon Williamson
+                                        </li>
+                        </div>
+                <div class="position-players">
+                        <div class="infielders">
+                                <ul>
+                                        <li>Tyler Stephenson I</li>
+                                        <li>Jose Trevino I
+                                        </li>
+                                        <li>Jeimer Candelario I
+                                        </li>
+                                        <li>Elly De La Cruz I
+                                        </li>
+                                        <li>Christian Encarnacion-Strand I
+                                        </li>
+                                        <li>Santiago Espinal I
+                                        </li>
+                                        <li>Gavin Lux I
+                                        </li>
+                                        <li>Matt McLain I
+                                        </li>
+                                </ul>   
+                        </div>    
+                        <div class="Outfielders">
+                                <ul>      
+                                        <li>Blake Dunn O
+                                        </li>
+                                        <li>Stuart Fairchild O
+                                        </li>
+                                        <li>Jake Fraley O
+                                        </li>
+                                        <li>TJ Friedl O
+                                        </li>
+                                        <li>Austin Hays O
+                                        </li>
+                                        <li>Jacob Hurtubise O
+                                        </li>
+                                        <li>Spencer Steer O
+                                        </li>
+                                 </ul>
+                        </div>
+                </div>
+        </div>
+
+</body>
+
 </html>
 
 
 
-
+</ul> 
