continued css notes

--- a/Notes/CSS Notes/index.html
+++ b/Notes/CSS Notes/index.html
@@ -108,7 +108,7 @@
                                         </li>
                                         <li>TJ Friedl O
                                         </li>
-                                        <li>Austin Hays O
+                                        <li style= color:pink;background-color: lime>Austin Hays O
                                         </li>
                                         <li>Jacob Hurtubise O
                                         </li>
