Made Flex Notes

--- a/Notes/CSS Notes/index.html
+++ b/Notes/CSS Notes/index.html
@@ -14,7 +14,7 @@
     <h1>Hello, world!</h1>
     <div>Hi</div>
     <p>Is anybody there?</p>
-    <div class="sad">Okay, then.  Bye....</div>
+    <-- <div class="sad">Okay, then.  Bye....</div>
     --->
 
 
@@ -45,7 +45,7 @@
         <div class = "read important">Message 3</div>
         <div class = "read">Message 4</div> -->
         
-        <div class=" Roster">
+        <!-- <div class=" Roster">
                 <div class="Pitchers">
                         <div class="Starters">
                                 <ul>
@@ -117,12 +117,13 @@
                                  </ul>
                         </div>
                 </div>
-        </div>
-
+        </div>  -->
+<div class = "flex-container">
+<div class = "one"></div>
+<div class = "two"></div>
+<div class = "three"></div>
+</div>
 </body>
-
 </html>
 
 
-
-</ul> 
