--- a/Practice/index.html
+++ b/Practice/index.html
@@ -5,5 +5,10 @@
         <meta charset="UTF-8:">
         <link rel="stylesheet" href="generalPractice.js">
         <meta name="viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Practice</title>
+        <title>HTML notes</title>
 </head>
+<body>
+        <script src="evenFibonacci.js"></script>
+
+</body>
+</html>
