--- a/Practice/index.html
+++ b/Practice/index.html
@@ -8,7 +8,7 @@
         <title>HTML notes</title>
 </head>
 <body>
-        <script src="evenFibonacci.js"></script>
+        <script src="2520.js"></script>
 
 </body>
 </html>
